--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -17,3 +17,14 @@ services:
       - catalogdb
     ports:
       - "8000:80" # forwarding port
+
+  basket.api:
+    container_name: basket.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings:ConnectionString=basketdb:6379"
+    depends_on:
+      - basketdb
+    ports:
+      - "8001:80" # use diffent port for docker 
+
