--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,24 +1,31 @@
 version: '3.4'
 
 services:
-  catalogdb:
+  catalogdb: #database settings
     container_name: catalogdb
     restart: always
     ports:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
-  catalog.api:
+
+  basketdb:   #database settings
+    container_name: basketdb
+    restart: always
+    ports:
+      - "6379:6379"
+
+  catalog.api: #api details
     container_name: catalog.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017" #do not use localhost-- instead use catalogdb
+      - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017" # replace localhost with catalogdb
     depends_on:
       - catalogdb
     ports:
       - "8000:80" # forwarding port
 
-  basket.api:
+  basket.api:   #api details
     container_name: basket.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
