--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.4'
 
 services:
   catalogdb:
-    image: mongo 
+    image: mongo
+  basketdb:
+    image: redis:alphine  # takes less space of resis-alphine  
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
