--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,10 @@ services:
   catalogdb:
     image: mongo
   basketdb:
-    image: redis:alpine  # takes less space of resis-alphine  
+    image: redis:alpine  # takes less space of resis-alphine 
+  portainer:
+    image: portainer/portainer-ce
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
@@ -19,3 +22,4 @@ services:
 
 volumes: #save data
   mongo_data:
+  portainer_data:  # userinfo
