--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,15 @@ services:
       context: .
       dockerfile: src/Services/Basket/Basket.API/Dockerfile
 
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discountapi
+    build:
+      context: .
+      dockerfile: src/Services/Discount/Discount.API/Dockerfile
+
 volumes: #save data
   mongo_data:
   portainer_data:  # userinfo
   postgres_data:
   pgadmin_data:
+
