--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;"
+  },
+  "EmailSettings": {
+    "FromAddress": "santosh33@gmail.com",
+    "ApiKey": "",
+    "FromName": "Santosh"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
