--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -36,6 +36,13 @@ services:
     ports:
         - "1434:1433"
 
+  rabbitmq:
+    container_name: rabbitmq
+    restart: always
+    ports:
+        - "5672:5672"  #---rabbitmq
+        - "15672:15672"    #---rabbitmq - dashboard
+
   pgadmin:
     container_name: pgadmin
     environment:
